assets/css/style.css
body {
    overflow-x: hidden;
}
.navbar {
    padding: 0rem;
    padding-bottom: 0;
}

.bg-custom {
    background-color: white;
}
.navbar-brand {
    font-family: 'Amatic SC', cursive;
    font-size: 3rem;
}
.navbar-light .navbar-brand {
    color: black;
}
.å {
    color: black;
}

.å:hover {
    color: yellow;
}
.navbar-light .navbar-brand:hover {
    color: red;
}
.navbar-light .navbar-nav .nav-link {
    color: yellow;
    font-family: 'Amatic SC';
    font-size: 1.5rem;
}
/*
.bg-light {
    background: none;
}
*/
.callout-container-fluid{
    height: 70vh;
    width: 100%;
    background: url("images/lake.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
    font-family: 'Rock Salt', cursive;
    position: relative;
    color: #ffff00;
    margin-top: 5rem; 
   }

   .container-fluid{
    margin-right: 0;
    margin-left: 0;
    padding-left: 0;
    padding-right: 0;
    border: 0;
}

.navbar-container-fluid{
    position: fixed;
    width: 100%;
    z-index:10;  
}

.jumbotron {
    background-color: transparent;
    padding: 0;
}

.jumbotron-header {
    color: white;
    font-family: 'Amatic SC';
    font-size: 5rem; 
}
.header {
    padding: 0rem;
}
.main-heading {
    font-family: 'Amatic SC';
    padding-top: 2rem;
}

/*---------City and Culture---------*/

.city-and-culture-header {
    font-family: 'Amatic SC';
    padding-top: 3rem;
    padding-bottom: 2rem;
}

.card-deck-container {
    margin-right: 15px;
    margin-left: 15px;
}

.card-deck {
    margin-left: 15px;
    margin-right: 15px;
    border: none;
}
.card {
    width: 28rem;
}

